Fix aria-hidden bug
* Aria-hidden is lies and acts buggy in production
* Use absolute off-screen positioning instead
* Should still work for accessibility and SEO

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -4,6 +4,12 @@ body {
   padding: 0;
 }
 
+h1 {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
 .menu {
   background: lighten($grey,20%);
   border-radius: 4px;
